hphp/test/zend/good/ext/posix/tests/posix_ttyname_variation2.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('posix')) {
    die('SKIP The posix extension is not loaded.');
}
}
