hphp/test/zend/bad/ext/posix/tests/posix_getgrgid_macosx.php.skipif
<?php
if (!extension_loaded('posix')) {
    die('SKIP The posix extension is not loaded.');
}
if (strtolower(PHP_OS) != 'darwin') {
    die('SKIP This test requires MacOSX/Darwin.');
}
?>